# flagcal

./: AUTHORS  IMPORTANT  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  install.txt
autom4te.cache/: output.0  traces.0  traces.1
examples/: calib.in  flag.in  parameters.in  sources.in
src/: Changelog.txt  Makefile  Makefile.am  Makefile.in  a.out  average.c  baselines.c  complex.c  complex.h  defs.h  find_bad_timerange.c  flag_apply.c  flag_data.c  flag_timerange.c  flagcal.h  flux_calib.c  gain_apply.c  gain_compute.c  gain_interpolate.c  gain_solve.c  gettime.c  group_data.c  grplot.c  igplot.c  igrplot.c  initilise.c  io.c  io.c~  ivplot.c  ivsrplot.c  jdcal.c  keywords.inc  liststruc.c  longest_block.c  mad.c  mad_filter.c  main.c  median.c  minmax.c  out  (+16 more)
src/.deps/: flagcal-average.Po  flagcal-complex.Po  flagcal-find_bad_timerange.Po  flagcal-flag_apply.Po  flagcal-flag_data.Po  flagcal-flag_timerange.Po  flagcal-flux_calib.Po  flagcal-gain_apply.Po  flagcal-gain_compute.Po  flagcal-gain_interpolate.Po  flagcal-gain_solve.Po  flagcal-gettime.Po  flagcal-group_data.Po  flagcal-initilise.Po  flagcal-io.Po  flagcal-longest_block.Po  flagcal-mad.Po  flagcal-mad_filter.Po  flagcal-main.Po  flagcal-median.Po  flagcal-minmax.Po  flagcal-peak_remove.Po  flagcal-piksrt.Po  flagcal-printerror.Po  flagcal-read_fits.Po  flagcal-remove_rfi.Po  flagcal-smooth_data.Po  flagcal-write_fits.Po  igplot-complex.Po  igplot-igplot.Po  igplot-jdcal.Po  igplot-minmax.Po  igrplot-baselines.Po  igrplot-complex.Po  igrplot-gettime.Po  igrplot-group_data.Po  igrplot-igrplot.Po  igrplot-jdcal.Po  igrplot-minmax.Po  igrplot-printerror.Po  (+25 more)
